# logcap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
tests/: consume_before_setup.rs  process.rs
