[package]
name = "logcap"
description = "A library for capturing log output."
version = "0.1.2"
edition = "2021"
keywords = ["log", "capture", "test"]
categories = ["development-tools::debugging", "development-tools::testing"]
homepage = "https://github.com/kormide/logcap"
repository = "https://github.com/kormide/logcap"
license = "MIT"

[dependencies]
log = "0.4.0"
regex = "1.11.2"
